clean up the code

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ results/local_interpretable_models/
 # diagnostic_classifier/model_savings
 diagnostic_classifier/model_savings/
 
+# abs_classifiers/model_savings
+abs_classifiers/model_savings/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
